fixed credits alignment for mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -122,7 +122,7 @@ body    {
 
   .lr-synopsis__index {
     position: absolute;
-    margin-top: 1%;
+    /* margin-top: 1%; */
     width: 100%;
     color: #fff;
     font-family: 'Times New Roman', Times, serif;
@@ -231,7 +231,7 @@ body    {
 #lr-credit11__index,
 #lr-credit12__index,
 #lr-credit13__index {
-    margin-top: 210px;
+    margin-top: 200px;
     font-size: 35px;
     text-align: center; 
     display: none;
